# proyecto-desarrollo-soluciones

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  data.dvc  pyproject.toml
.dvc/: config
animal_classification/: __init__.py
animal_classification/datasets/: __init__.py  animal_image_dataset.py  animal_metadata_dataset.py
animal_classification/models/: __init__.py  resnet_classifier.py
animal_classification/train/: __init__.py  train_config.py  train_utils.py  trainer.py
docs/: gitflow.md
notebooks/: Animales.ipynb
tests/unit/: test_datasets.py
tests/unit/train/: test_trainer.py
