[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "animal_classification"
version = "0.0.1"
description = "Proyecto para clasificacion de imagenes de animales"
authors = [
  { name = " Amir Sadour Gutierrez", email = "a.sadour@uniandes.edu.co" },
  { name = "Camilo Andrés Rodríguez Salamanca ", email = "ca.rodriguezs123@uniandes.edu.co" },
  { name = "Claudia Johana Agudelo Arango", email = "cj.agudelo@uniandes.edu.co" },
  { name = "Luis Gerardo Manrique Cardona ", email = "l.manriquec@uniandes.edu.co" }
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]

dependencies = [
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

requires-python = ">=3.11,<3.14"

[dependency-groups]
dev = [
  "black",
  "isort",
  "ruff",
  "pre-commit",
  "mypy",
  "flake8",
  "pytest",
  "pytest-cov",
  "pytest-mock",
]


[tool.black]
line-length = 99
include = '\\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["animal_classification"]
force_sort_within_sections = true

[tool.flake8]
ignore = "E731,E266,E501,C901,W503"
max-line-length = 99
exclude = ".git,notebooks,references,models,data"

[tool.ruff]
line-length = 99
select = ["E", "F", "W", "C90", "I"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]




